Transition small fixes

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -102,13 +102,4 @@ button {
   animation: none;
   mix-blend-mode: normal;
   display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  overflow: hidden;
-  pointer-events: none;
-  z-index: 1;
-  opacity: 1;
 }
